<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topPanel"
        app:elevation="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="bottom"
        app:layout_behavior="com.architecture.base.widget.HeaderFitStatusBarBehavior">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:contentInsetStartWithNavigation="0dp"
                app:navigationIcon="@drawable/ic_arrow_left" >

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/earn"
                    android:textAppearance="@style/Toolbar.TitleText"/>
            </androidx.appcompat.widget.Toolbar>
        </FrameLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_anchor="@id/topPanel"
        android:background="@color/white"
        app:layout_behavior="com.architecture.base.widget.BelowAnchorBehavior">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/product_icon"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_product_btc"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryBlack"
            app:layout_constraintStart_toEndOf="@+id/product_icon"
            app:layout_constraintTop_toTopOf="@+id/product_icon"
            app:layout_constraintBottom_toBottomOf="@+id/product_icon"
            android:text="BTC"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/product_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_swap_light"
            app:layout_constraintTop_toBottomOf="@+id/product_icon">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/product_info_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/colorAccentDark"
                android:textSize="16sp"
                android:text="Product Info"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/product_info_title"
                android:textColor="@color/colorPrimaryBlack"
                android:textSize="14sp"
                android:text="Est. APY"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/earnings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="21dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/product_info_title"
                android:textColor="@color/colorPrimaryBlack"
                android:textSize="20sp"
                android:text="2%-4%"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/earnings"
                android:textColor="@color/colorPrimaryBlack"
                android:textSize="14sp"
                android:text="Term"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/term"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="25dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/earnings"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textColor="@color/colorPrimaryBlack"
                android:textSize="20sp"
                android:text="Flexible"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimaryGray_4"
            app:layout_constraintTop_toBottomOf="@+id/product_info"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_info"
            android:textColor="@color/colorPrimaryGray"
            android:textSize="14sp"
            android:text="Amount"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_info"
            android:textColor="@color/colorPrimaryBlack"
            android:textSize="14sp"
            android:text="14.1BTC"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/amount"
            android:textColor="@color/colorPrimaryGray"
            android:textSize="14sp"
            android:text="Total earnings"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/total_earnings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/amount"
            android:textColor="@color/colorPrimaryBlack"
            android:textSize="14sp"
            android:text="+1.4BTC"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/total_earnings"
            android:textColor="@color/colorPrimaryGray"
            android:textSize="14sp"
            android:text="Today’s earnings"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/today_earnings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/total_earnings"
            android:textColor="@color/colorPrimaryBlack"
            android:textSize="14sp"
            android:text="+0.4BTC"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/today_earnings"
            android:textColor="@color/colorPrimaryGray"
            android:textSize="14sp"
            android:text="Available balance"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/available_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/today_earnings"
            android:textColor="@color/colorPrimaryBlack"
            android:textSize="14sp"
            android:text="154.3455 BTC"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_subscribe"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/btn_bg_enable"
            android:layout_marginBottom="26dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="@string/subscribe"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_redeem"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_redeem"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="26dp"
            android:background="@drawable/btn_bg_enable"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="@string/redeem"
            app:layout_constraintStart_toEndOf="@+id/btn_subscribe"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>